# Cybers_security

./: .gitignore  .gitmodules  brute_xor.py  brute_xor_dynamic.py  brute_xorient.py  factor.json  modsecurity.sh  readme.md  text.txt  waf.php  waf.sh  waf_evasive.sh  xorient_enc.py
.obsidian/: workspace.json
2023/: .gitignore
2023/LKS 2023/: brute_xorient.py
CTF-its-ara 2023/: ~$_ARACTF_Haripotar.docx
CTF-its-ara 2023/Binary Exploitation/bakso komplek/: link.txt
CTF-its-ara 2023/Binary Exploitation/nasgor komplek/: link.txt
CTF-its-ara 2023/Cryptography/Help/: attachments.txt
CTF-its-ara 2023/Cryptography/babychall/: attachments.txt  link.txt
CTF-its-ara 2023/WU N Exploit/: Link Wu.txt
CTF/2024/: 2024.sln
CTF/2024/HTB-Cyber Apocalypse/Cryptography/Permuted/challenge/permutation/: Cargo.toml
CTF/2024/HTB-Cyber Apocalypse/Cryptography/Permuted/challenge/permutation/src/: main.rs  permutation.rs  utils.rs
Cheatsheets/: Hardening_Services_n_Standarts.md  Patching_Web.md
CryptoHacks/: only1rsa.py
LKS 2023/: waf.sh  waf_evasive.sh  xorient_enc.py
LKS 2023/Belajar/: access.py
LKS wirte/: crypto 3.py
LKSN SMK 30 Cybersecurity/: challs.json
My-CTF/Cryptography/: .gitignore
cache/: solidity-files-cache.json
tools/: LCG_linear_cracker.py  Tranpose.py  brute Magic.php  fermat_factor.py  getCombination.py  globfuscator.py  qrazy_box_bruteforcer  vigenère.py
tools/APK.Tool.GUI.v3.3.1.0/: config.xml
tools/globfuscator/: globfuscator-deprecated.py  globfuscator.py  test.py
tools/minified/: globfuscator.py
tools/x64dbg/: commithash.txt
(+2051 files in other folders)
